ajout Tests unitaires + IA

--- a/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_test.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">73</td>
-            <td class="headerCovTableEntry">108</td>
-            <td class="headerCovTableEntryLo">67.6 %</td>
+            <td class="headerCovTableEntry">357</td>
+            <td class="headerCovTableEntry">429</td>
+            <td class="headerCovTableEntryMed">83.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-12 18:07:39</td>
+            <td class="headerValue">2022-05-16 13:05:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntryMed">75.0 %</td>
+            <td class="headerCovTableEntry">32</td>
+            <td class="headerCovTableEntry">39</td>
+            <td class="headerCovTableEntryMed">82.1 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -60,52 +60,160 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#65">test_deplacement_droite</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#48">setup_map</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#91">test_deplacement_droite2</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#350">test_deplacement_droite_rob</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#241">test_init_calque_bis</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#476">test_enough_energie_silence</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#299">main</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#301">test_free_Carte</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#491">test_free_joueur</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#631">test_free_model</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#177">test_init_map</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#641">main</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#57">test_energie_down</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#33">setup_case</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#51">test_energie_up</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#580">test_action</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#231">test_init_calque</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#286">test_choix_carte_antartica</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#219">test_init_joueur</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#270">test_choix_carte_archipelago</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#248">test_init_reset</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#252">test_crea_antartica</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#263">test_start_Sous_Marin</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#231">test_crea_archipelago</a></td>
               <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#392">test_deplacement_bas</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#332">test_deplacement_droite</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#412">test_deplacement_gauche</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#372">test_deplacement_haut</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#433">test_deplacement_possible</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#320">test_energie_down</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#312">test_energie_up</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#486">test_enough_energie_dplcmt</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#449">test_enough_energie_missile</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#461">test_enough_energie_surface</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#221">test_est_occupe</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#170">test_init_Case</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#113">test_init_calque</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#157">test_init_joueur</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#192">test_init_model</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#131">test_init_reset</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#499">test_missile</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#525">test_result_missile</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#211">test_set_Rocher</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#144">test_start_Sous_Marin</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#542">test_surface</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#468">test_enough_energie_sonar</a></td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#6">setup_joueur</a></td>
-              <td class="coverFnHi">6</td>
+              <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#43">teardown</a></td>
-              <td class="coverFnHi">6</td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#68">setup_playground</a></td>
+              <td class="coverFnHi">23</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#102">teardown</a></td>
+              <td class="coverFnHi">28</td>
             </tr>
   </table>
   <br>
