--- a/Test_Unitaires/Coverage_model_info/model/carte.c.func.html
+++ b/Test_Unitaires/Coverage_model_info/model/carte.c.func.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">0</td>
+            <td class="headerCovTableEntry">41</td>
             <td class="headerCovTableEntry">44</td>
-            <td class="headerCovTableEntryLo">0.0 %</td>
+            <td class="headerCovTableEntryHi">93.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-12 18:07:39</td>
+            <td class="headerValue">2022-05-16 13:05:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">0</td>
+            <td class="headerCovTableEntry">7</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">0.0 %</td>
+            <td class="headerCovTableEntryMed">87.5 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -61,19 +61,19 @@
     </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#45">Crea_Antartica</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#34">Crea_Archipelago</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#55">choix_carte</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#16">est_occupe</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">6</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#20">free_Carte</a></td>
@@ -81,15 +81,15 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#7">init_Case</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">3801</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#24">init_map</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">38</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="carte.c.gcov.html#12">set_Rocher</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">35</td>
             </tr>
   </table>
   <br>
