--- a/Test_Unitaires/Coverage_model_info/model/joueur.c.func.html
+++ b/Test_Unitaires/Coverage_model_info/model/joueur.c.func.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">41</td>
+            <td class="headerCovTableEntry">200</td>
             <td class="headerCovTableEntry">274</td>
-            <td class="headerCovTableEntryLo">15.0 %</td>
+            <td class="headerCovTableEntryLo">73.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-12 18:07:39</td>
+            <td class="headerValue">2022-05-16 13:05:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">6</td>
+            <td class="headerCovTableEntry">15</td>
             <td class="headerCovTableEntry">16</td>
-            <td class="headerCovTableEntryLo">37.5 %</td>
+            <td class="headerCovTableEntryHi">93.8 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -61,27 +61,27 @@
     </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#320">action</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">7</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#17">deplacement</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">12</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#77">deplacement_possible</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">6</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#13">energie_down</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#7">energie_up</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#7">energie_up</a></td>
+              <td class="coverFnHi">41</td>
+            </tr>
+    <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#178">enough_energie</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">12</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#164">free_joueur</a></td>
@@ -89,15 +89,15 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#144">init_calque</a></td>
-              <td class="coverFnHi">8</td>
+              <td class="coverFnHi">80</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#128">init_joueur</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFnHi">73</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#243">missile</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">9</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#154">reset_joueur</a></td>
@@ -105,23 +105,23 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#214">result_deplacement</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#271">result_missile</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#293">sonar</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#169">start_Sous_Marin</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#271">result_missile</a></td>
+              <td class="coverFnHi">4</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#293">sonar</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#169">start_Sous_Marin</a></td>
+              <td class="coverFnHi">17</td>
+            </tr>
+    <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#427">surface</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">2</td>
             </tr>
   </table>
   <br>
