--- a/Test_Unitaires/Coverage_test_info/index-sort-f.html
+++ b/Test_Unitaires/Coverage_test_info/index-sort-f.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_test.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">73</td>
-            <td class="headerCovTableEntry">108</td>
-            <td class="headerCovTableEntryLo">67.6 %</td>
+            <td class="headerCovTableEntry">357</td>
+            <td class="headerCovTableEntry">429</td>
+            <td class="headerCovTableEntryMed">83.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-12 18:07:39</td>
+            <td class="headerValue">2022-05-16 13:05:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">9</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntryMed">75.0 %</td>
+            <td class="headerCovTableEntry">32</td>
+            <td class="headerCovTableEntry">39</td>
+            <td class="headerCovTableEntryMed">82.1 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,12 +72,12 @@
     <tr>
       <td class="coverFile"><a href="Test_Unitaires/index.html">Test_Unitaires</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=68 height=10 alt="67.6%"><img src="snow.png" width=32 height=10 alt="67.6%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=83 height=10 alt="83.2%"><img src="snow.png" width=17 height=10 alt="83.2%"></td></tr></table>
       </td>
-      <td class="coverPerLo">67.6&nbsp;%</td>
-      <td class="coverNumLo">73 / 108</td>
-      <td class="coverPerMed">75.0&nbsp;%</td>
-      <td class="coverNumMed">9 / 12</td>
+      <td class="coverPerMed">83.2&nbsp;%</td>
+      <td class="coverNumMed">357 / 429</td>
+      <td class="coverPerMed">82.1&nbsp;%</td>
+      <td class="coverNumMed">32 / 39</td>
     </tr>
   </table>
   </center>
