--- a/Test_Unitaires/Coverage_model_info/index-sort-l.html
+++ b/Test_Unitaires/Coverage_model_info/index-sort-l.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">271</td>
-            <td class="headerCovTableEntry">342</td>
-            <td class="headerCovTableEntryMed">79.2 %</td>
+            <td class="headerCovTableEntry">320</td>
+            <td class="headerCovTableEntry">441</td>
+            <td class="headerCovTableEntryLo">72.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-23 15:29:47</td>
+            <td class="headerValue">2022-05-25 10:16:15</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntryHi">100.0 %</td>
+            <td class="headerCovTableEntry">28</td>
+            <td class="headerCovTableEntry">29</td>
+            <td class="headerCovTableEntryHi">96.6 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,12 +72,12 @@
     <tr>
       <td class="coverFile"><a href="model/index.html">model</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=79 height=10 alt="79.2%"><img src="snow.png" width=21 height=10 alt="79.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=73 height=10 alt="72.6%"><img src="snow.png" width=27 height=10 alt="72.6%"></td></tr></table>
       </td>
-      <td class="coverPerMed">79.2&nbsp;%</td>
-      <td class="coverNumMed">271 / 342</td>
-      <td class="coverPerHi">100.0&nbsp;%</td>
-      <td class="coverNumHi">26 / 26</td>
+      <td class="coverPerLo">72.6&nbsp;%</td>
+      <td class="coverNumLo">320 / 441</td>
+      <td class="coverPerHi">96.6&nbsp;%</td>
+      <td class="coverNumHi">28 / 29</td>
     </tr>
   </table>
   </center>
