--- a/Test_Unitaires/Coverage_model_info/model/IA.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_model_info/model/IA.c.func-sort-c.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>LCOV - coverage_model.info - model/main_model.c - functions</title>
+  <title>LCOV - coverage_model.info - model/IA.c - functions</title>
   <link rel="stylesheet" type="text/css" href="../gcov.css">
 </head>
 
@@ -19,7 +19,7 @@
         <table cellpadding=1 border=0 width="100%">
           <tr>
             <td width="10%" class="headerItem">Current view:</td>
-            <td width="35%" class="headerValue"><a href="../index.html">top level</a> - <a href="index.html">model</a> - main_model.c<span style="font-size: 80%;"> (<a href="main_model.c.gcov.html">source</a> / functions)</span></td>
+            <td width="35%" class="headerValue"><a href="../index.html">top level</a> - <a href="index.html">model</a> - IA.c<span style="font-size: 80%;"> (<a href="IA.c.gcov.html">source</a> / functions)</span></td>
             <td width="5%"></td>
             <td width="15%"></td>
             <td width="10%" class="headerCovTableHead">Hit</td>
@@ -31,9 +31,9 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">20</td>
-            <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntryMed">83.3 %</td>
+            <td class="headerCovTableEntry">33</td>
+            <td class="headerCovTableEntry">99</td>
+            <td class="headerCovTableEntryLo">33.3 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
@@ -41,8 +41,8 @@
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntryHi">100.0 %</td>
+            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntryLo">66.7 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -56,16 +56,20 @@
   <table width="60%" cellpadding=1 cellspacing=1 border=0>
     <tr><td><br></td></tr>
     <tr>
-      <td width="80%" class="tableHead">Function Name <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by function name" title="Sort by function name" border=0></span></td>
-      <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="main_model.c.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
+      <td width="80%" class="tableHead">Function Name <span class="tableHeadSort"><a href="IA.c.func.html"><img src="../updown.png" width=10 height=14 alt="Sort by function name" title="Sort by function name" border=0></a></span></td>
+      <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="main_model.c.gcov.html#36">free_model</a></td>
+              <td class="coverFn"><a href="IA.c.gcov.html#18">actionIA</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="IA.c.gcov.html#40">deplacementaleatoire</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="main_model.c.gcov.html#11">init_model</a></td>
-              <td class="coverFnHi">21</td>
+              <td class="coverFn"><a href="IA.c.gcov.html#49">actionIA2</a></td>
+              <td class="coverFnHi">4</td>
             </tr>
   </table>
   <br>
