--- a/Test_Unitaires/Coverage_model_info/model/index-sort-f.html
+++ b/Test_Unitaires/Coverage_model_info/model/index-sort-f.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">271</td>
-            <td class="headerCovTableEntry">342</td>
-            <td class="headerCovTableEntryMed">79.2 %</td>
+            <td class="headerCovTableEntry">320</td>
+            <td class="headerCovTableEntry">441</td>
+            <td class="headerCovTableEntryLo">72.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-23 15:29:47</td>
+            <td class="headerValue">2022-05-25 10:16:15</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntryHi">100.0 %</td>
+            <td class="headerCovTableEntry">28</td>
+            <td class="headerCovTableEntry">29</td>
+            <td class="headerCovTableEntryHi">96.6 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -70,6 +70,16 @@
       <td class="tableHead" colspan=2>Functions <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by function coverage" title="Sort by function coverage" border=0></span></td>
     </tr>
     <tr>
+      <td class="coverFile"><a href="IA.c.gcov.html">IA.c</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=33 height=10 alt="33.3%"><img src="../snow.png" width=67 height=10 alt="33.3%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">33.3&nbsp;%</td>
+      <td class="coverNumLo">33 / 99</td>
+      <td class="coverPerLo">66.7&nbsp;%</td>
+      <td class="coverNumLo">2 / 3</td>
+    </tr>
+    <tr>
       <td class="coverFile"><a href="main_model.c.gcov.html">main_model.c</a></td>
       <td class="coverBar" align="center">
         <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=83 height=10 alt="83.3%"><img src="../snow.png" width=17 height=10 alt="83.3%"></td></tr></table>
@@ -92,10 +102,10 @@
     <tr>
       <td class="coverFile"><a href="joueur.c.gcov.html">joueur.c</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=76 height=10 alt="75.5%"><img src="../snow.png" width=24 height=10 alt="75.5%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=81 height=10 alt="81.4%"><img src="../snow.png" width=19 height=10 alt="81.4%"></td></tr></table>
       </td>
-      <td class="coverPerMed">75.5&nbsp;%</td>
-      <td class="coverNumMed">207 / 274</td>
+      <td class="coverPerMed">81.4&nbsp;%</td>
+      <td class="coverNumMed">223 / 274</td>
       <td class="coverPerHi">100.0&nbsp;%</td>
       <td class="coverNumHi">16 / 16</td>
     </tr>
