--- a/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_test.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">414</td>
-            <td class="headerCovTableEntry">452</td>
-            <td class="headerCovTableEntryHi">91.6 %</td>
+            <td class="headerCovTableEntry">468</td>
+            <td class="headerCovTableEntry">506</td>
+            <td class="headerCovTableEntryHi">92.5 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-23 15:29:47</td>
+            <td class="headerValue">2022-05-25 10:16:14</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">39</td>
-            <td class="headerCovTableEntry">41</td>
-            <td class="headerCovTableEntryHi">95.1 %</td>
+            <td class="headerCovTableEntry">43</td>
+            <td class="headerCovTableEntry">45</td>
+            <td class="headerCovTableEntryHi">95.6 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -68,7 +68,7 @@
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#662">main</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#732">main</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
@@ -81,6 +81,18 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#561">test_action</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#698">test_actionIA2_dplcmnt</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#669">test_actionIA2_missile</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#714">test_actionIA2_sonar</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
@@ -117,6 +129,10 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#428">test_deplacement_possible</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#660">test_deplacementaleatoire</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
@@ -208,20 +224,20 @@
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#4">__wrap_rand</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#8">setup_joueur</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#4">__wrap_rand</a></td>
+              <td class="coverFnHi">17</td>
+            </tr>
+    <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#70">setup_playground</a></td>
-              <td class="coverFnHi">27</td>
+              <td class="coverFnHi">31</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#104">teardown</a></td>
-              <td class="coverFnHi">33</td>
+              <td class="coverFnHi">37</td>
             </tr>
   </table>
   <br>
