--- a/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_test_info/Test_Unitaires/UTest_modele.c.func-sort-c.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_test.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">468</td>
-            <td class="headerCovTableEntry">506</td>
-            <td class="headerCovTableEntryHi">92.5 %</td>
+            <td class="headerCovTableEntry">498</td>
+            <td class="headerCovTableEntry">536</td>
+            <td class="headerCovTableEntryHi">92.9 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-25 10:16:14</td>
+            <td class="headerValue">2022-05-25 13:45:24</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">43</td>
             <td class="headerCovTableEntry">45</td>
-            <td class="headerCovTableEntryHi">95.6 %</td>
+            <td class="headerCovTableEntry">47</td>
+            <td class="headerCovTableEntryHi">95.7 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -60,167 +60,175 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#345">test_deplacement_droite_rob</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#332">test_deplacement_droite_rob</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#474">test_enough_energie_silence</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#456">test_enough_energie_silence</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#732">main</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#749">main</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#35">setup_case</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#33">setup_case</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#50">setup_map</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#48">setup_map</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#561">test_action</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#543">test_action</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#698">test_actionIA2_dplcmnt</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#670">test_actionIA2_dplcmnt</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#669">test_actionIA2_missile</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#705">test_actionIA2_dplcmnt_2</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#714">test_actionIA2_sonar</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#643">test_actionIA2_missile</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#287">test_choix_carte_antartica</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#685">test_actionIA2_sonar</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#271">test_choix_carte_archipelago</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#722">test_actionIA2_surface</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#253">test_crea_antartica</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#276">test_choix_carte_antartica</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#232">test_crea_archipelago</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#259">test_choix_carte_archipelago</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#387">test_deplacement_bas</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#241">test_crea_antartica</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#327">test_deplacement_droite</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#220">test_crea_archipelago</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#407">test_deplacement_gauche</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#374">test_deplacement_bas</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#367">test_deplacement_haut</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#314">test_deplacement_droite</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#428">test_deplacement_possible</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#394">test_deplacement_gauche</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#660">test_deplacementaleatoire</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#354">test_deplacement_haut</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#315">test_energie_down</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#414">test_deplacement_possible</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#307">test_energie_up</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#634">test_deplacementaleatoire</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#484">test_enough_energie_dplcmt</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#305">test_energie_down</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#447">test_enough_energie_missile</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#298">test_energie_up</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#459">test_enough_energie_surface</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#466">test_enough_energie_dplcmt</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#222">test_est_occupe</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#430">test_enough_energie_missile</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#645">test_free_Carte</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#441">test_enough_energie_surface</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#652">test_free_joueur</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#203">test_est_occupe</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#636">test_free_model</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#213">test_free_Carte</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#172">test_init_Case</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#535">test_free_joueur</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#115">test_init_calque</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#618">test_free_model</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#159">test_init_joueur</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#160">test_init_Case</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#179">test_init_map</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#110">test_init_calque</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#193">test_init_model</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#147">test_init_joueur</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#133">test_init_reset</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#167">test_init_map</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#491">test_missile</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#181">test_init_model</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#517">test_result_missile</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#121">test_init_reset</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#212">test_set_Rocher</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#472">test_missile</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#613">test_sonar</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#498">test_result_missile</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#146">test_start_Sous_Marin</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#193">test_set_Rocher</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#534">test_surface</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#592">test_sonar</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#466">test_enough_energie_sonar</a></td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#134">test_start_Sous_Marin</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#515">test_surface</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#448">test_enough_energie_sonar</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
@@ -229,15 +237,15 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="UTest_modele.c.gcov.html#4">__wrap_rand</a></td>
-              <td class="coverFnHi">17</td>
+              <td class="coverFnHi">23</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#70">setup_playground</a></td>
-              <td class="coverFnHi">31</td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#68">setup_playground</a></td>
+              <td class="coverFnHi">33</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="UTest_modele.c.gcov.html#104">teardown</a></td>
-              <td class="coverFnHi">37</td>
+              <td class="coverFn"><a href="UTest_modele.c.gcov.html#99">teardown</a></td>
+              <td class="coverFnHi">39</td>
             </tr>
   </table>
   <br>
