--- a/Test_Unitaires/Coverage_model_info/model/IA.c.gcov.html
+++ b/Test_Unitaires/Coverage_model_info/model/IA.c.gcov.html
@@ -31,13 +31,13 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">33</td>
+            <td class="headerCovTableEntry">36</td>
             <td class="headerCovTableEntry">99</td>
-            <td class="headerCovTableEntryLo">33.3 %</td>
+            <td class="headerCovTableEntryLo">36.4 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-25 10:16:15</td>
+            <td class="headerValue">2022-05-25 13:45:24</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">2</td>
@@ -110,49 +110,49 @@
 <a name="48"><span class="lineNum">      48 </span>            :     }</a>
 <a name="49"><span class="lineNum">      49 </span><span class="lineCov">          1 :     return deplacement;</span></a>
 <a name="50"><span class="lineNum">      50 </span>            : }</a>
-<a name="51"><span class="lineNum">      51 </span><span class="lineCov">          4 : enum OPTION actionIA2(Playground *pg) {</span></a>
+<a name="51"><span class="lineNum">      51 </span><span class="lineCov">          6 : enum OPTION actionIA2(Playground *pg) {</span></a>
 <a name="52"><span class="lineNum">      52 </span>            :     char message[100];</a>
 <a name="53"><span class="lineNum">      53 </span>            :     enum OPTION choix;</a>
-<a name="54"><span class="lineNum">      54 </span><span class="lineCov">          4 :     int dir =rand()%4;</span></a>
-<a name="55"><span class="lineNum">      55 </span><span class="lineCov">          4 :     int ligne = rand() % 10;</span></a>
-<a name="56"><span class="lineNum">      56 </span><span class="lineCov">          4 :     int colonne = rand() % 10;</span></a>
+<a name="54"><span class="lineNum">      54 </span><span class="lineCov">          6 :     int dir =rand()%4;</span></a>
+<a name="55"><span class="lineNum">      55 </span><span class="lineCov">          6 :     int ligne = rand() % 10;</span></a>
+<a name="56"><span class="lineNum">      56 </span><span class="lineCov">          6 :     int colonne = rand() % 10;</span></a>
 <a name="57"><span class="lineNum">      57 </span>            : </a>
 <a name="58"><span class="lineNum">      58 </span>            : </a>
 <a name="59"><span class="lineNum">      59 </span>            :     /*enum OPTION last = pg-&gt;ia-&gt;lastaction;*/</a>
 <a name="60"><span class="lineNum">      60 </span>            :     /*if (surface_joueur != 1){*/</a>
 <a name="61"><span class="lineNum">      61 </span>            : </a>
-<a name="62"><span class="lineNum">      62 </span><span class="lineCov">          4 :     if (pg-&gt;ia-&gt;surface_joueur == 1 &amp;&amp; pg-&gt;J2-&gt;energie == 4) {</span></a>
+<a name="62"><span class="lineNum">      62 </span><span class="lineCov">          6 :     if (pg-&gt;ia-&gt;surface_joueur == 1 &amp;&amp; pg-&gt;J2-&gt;energie == 4) {</span></a>
 <a name="63"><span class="lineNum">      63 </span><span class="lineCov">          1 :         choix = MIS;</span></a>
 <a name="64"><span class="lineNum">      64 </span><span class="lineCov">          1 :         ligne = pg-&gt;J1-&gt;S_M-&gt;ligne;</span></a>
 <a name="65"><span class="lineNum">      65 </span><span class="lineCov">          1 :         colonne = pg-&gt;J1-&gt;S_M-&gt;colonne;</span></a>
-<a name="66"><span class="lineNum">      66 </span><span class="lineCov">          3 :     } else if(pg-&gt;ia-&gt;surface_joueur == 1 &amp;&amp; pg-&gt;J2-&gt;energie != 4) {</span></a>
-<a name="67"><span class="lineNum">      67 </span><span class="lineCov">          1 :         choix = DEPLCMNT;</span></a>
-<a name="68"><span class="lineNum">      68 </span><span class="lineCov">          1 :         if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
+<a name="66"><span class="lineNum">      66 </span><span class="lineCov">          5 :     } else if(pg-&gt;ia-&gt;surface_joueur == 1 &amp;&amp; pg-&gt;J2-&gt;energie != 4) {</span></a>
+<a name="67"><span class="lineNum">      67 </span><span class="lineCov">          2 :         choix = DEPLCMNT;</span></a>
+<a name="68"><span class="lineNum">      68 </span><span class="lineCov">          2 :         if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
 <a name="69"><span class="lineNum">      69 </span><span class="lineNoCov">          0 :             deplacement_possible(pg, J2, haut) == 0 &amp;&amp; deplacement_possible(pg, J2, bas) == 0) {</span></a>
 <a name="70"><span class="lineNum">      70 </span><span class="lineNoCov">          0 :             choix = SURF;</span></a>
 <a name="71"><span class="lineNum">      71 </span><span class="lineNoCov">          0 :             pg-&gt;ia-&gt;nbaction--;</span></a>
 <a name="72"><span class="lineNum">      72 </span>            :         } else</a>
 <a name="73"><span class="lineNum">      73 </span>            :         {</a>
-<a name="74"><span class="lineNum">      74 </span><span class="lineCov">          1 :             if (dir == gauche &amp;&amp; deplacement_possible(pg, J2, gauche) == 0) {</span></a>
+<a name="74"><span class="lineNum">      74 </span><span class="lineCov">          2 :             if (dir == gauche &amp;&amp; deplacement_possible(pg, J2, gauche) == 0) {</span></a>
 <a name="75"><span class="lineNum">      75 </span><span class="lineNoCov">          0 :                 dir = deplacementaleatoire(pg);</span></a>
 <a name="76"><span class="lineNum">      76 </span>            :             }</a>
-<a name="77"><span class="lineNum">      77 </span><span class="lineCov">          1 :             if (dir == droite &amp;&amp; deplacement_possible(pg, J2, droite) == 0) {</span></a>
+<a name="77"><span class="lineNum">      77 </span><span class="lineCov">          2 :             if (dir == droite &amp;&amp; deplacement_possible(pg, J2, droite) == 0) {</span></a>
 <a name="78"><span class="lineNum">      78 </span><span class="lineNoCov">          0 :                 dir = deplacementaleatoire(pg);}</span></a>
-<a name="79"><span class="lineNum">      79 </span><span class="lineCov">          1 :             if (dir == haut &amp;&amp; deplacement_possible(pg, J2, haut) == 0) {</span></a>
+<a name="79"><span class="lineNum">      79 </span><span class="lineCov">          2 :             if (dir == haut &amp;&amp; deplacement_possible(pg, J2, haut) == 0) {</span></a>
 <a name="80"><span class="lineNum">      80 </span><span class="lineNoCov">          0 :                 dir = deplacementaleatoire(pg);}</span></a>
-<a name="81"><span class="lineNum">      81 </span><span class="lineCov">          1 :             if (dir == bas &amp;&amp; deplacement_possible(pg, J2, bas) == 0) {</span></a>
+<a name="81"><span class="lineNum">      81 </span><span class="lineCov">          2 :             if (dir == bas &amp;&amp; deplacement_possible(pg, J2, bas) == 0) {</span></a>
 <a name="82"><span class="lineNum">      82 </span><span class="lineNoCov">          0 :                 dir = deplacementaleatoire(pg);}</span></a>
 <a name="83"><span class="lineNum">      83 </span>            :         }</a>
 <a name="84"><span class="lineNum">      84 </span>            :     }</a>
 <a name="85"><span class="lineNum">      85 </span>            :     else {</a>
-<a name="86"><span class="lineNum">      86 </span><span class="lineCov">          2 :         if (pg-&gt;ia-&gt;nbaction &lt; 6) {</span></a>
-<a name="87"><span class="lineNum">      87 </span><span class="lineCov">          2 :             if ((pg-&gt;ia-&gt;nbaction % 3) &lt; 2) {</span></a>
-<a name="88"><span class="lineNum">      88 </span><span class="lineCov">          1 :                 choix = DEPLCMNT;</span></a>
+<a name="86"><span class="lineNum">      86 </span><span class="lineCov">          3 :         if (pg-&gt;ia-&gt;nbaction &lt; 6) {</span></a>
+<a name="87"><span class="lineNum">      87 </span><span class="lineCov">          3 :             if ((pg-&gt;ia-&gt;nbaction % 3) &lt; 2) {</span></a>
+<a name="88"><span class="lineNum">      88 </span><span class="lineCov">          2 :                 choix = DEPLCMNT;</span></a>
 <a name="89"><span class="lineNum">      89 </span>            : </a>
-<a name="90"><span class="lineNum">      90 </span><span class="lineCov">          1 :                 if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
-<a name="91"><span class="lineNum">      91 </span><span class="lineNoCov">          0 :                     deplacement_possible(pg, J2, haut) == 0 &amp;&amp; deplacement_possible(pg, J2, bas) == 0) {</span></a>
-<a name="92"><span class="lineNum">      92 </span><span class="lineNoCov">          0 :                     choix = SURF;</span></a>
-<a name="93"><span class="lineNum">      93 </span><span class="lineNoCov">          0 :                     pg-&gt;ia-&gt;nbaction--;</span></a>
+<a name="90"><span class="lineNum">      90 </span><span class="lineCov">          3 :                 if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
+<a name="91"><span class="lineNum">      91 </span><span class="lineCov">          2 :                     deplacement_possible(pg, J2, haut) == 0 &amp;&amp; deplacement_possible(pg, J2, bas) == 0) {</span></a>
+<a name="92"><span class="lineNum">      92 </span><span class="lineCov">          1 :                     choix = SURF;</span></a>
+<a name="93"><span class="lineNum">      93 </span><span class="lineCov">          1 :                     pg-&gt;ia-&gt;nbaction--;</span></a>
 <a name="94"><span class="lineNum">      94 </span>            :                 } else  {</a>
 <a name="95"><span class="lineNum">      95 </span><span class="lineCov">          1 :                     if (dir == gauche &amp;&amp; deplacement_possible(pg, J2, gauche) == 0)</span></a>
 <a name="96"><span class="lineNum">      96 </span><span class="lineNoCov">          0 :                         dir = deplacementaleatoire(pg);</span></a>
@@ -168,7 +168,7 @@
 <a name="106"><span class="lineNum">     106 </span>            :             }</a>
 <a name="107"><span class="lineNum">     107 </span>            :         }</a>
 <a name="108"><span class="lineNum">     108 </span>            : </a>
-<a name="109"><span class="lineNum">     109 </span><span class="lineCov">          2 :         if (pg-&gt;ia-&gt;nbaction &gt; 5 &amp;&amp; pg-&gt;ia-&gt;nbaction &lt; 19) {</span></a>
+<a name="109"><span class="lineNum">     109 </span><span class="lineCov">          3 :         if (pg-&gt;ia-&gt;nbaction &gt; 5 &amp;&amp; pg-&gt;ia-&gt;nbaction &lt; 19) {</span></a>
 <a name="110"><span class="lineNum">     110 </span><span class="lineNoCov">          0 :             if (pg-&gt;ia-&gt;nbaction % 5 &lt; 4) {</span></a>
 <a name="111"><span class="lineNum">     111 </span><span class="lineNoCov">          0 :                 choix = DEPLCMNT;</span></a>
 <a name="112"><span class="lineNum">     112 </span><span class="lineNoCov">          0 :                 if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
@@ -193,7 +193,7 @@
 <a name="131"><span class="lineNum">     131 </span>            :                 }</a>
 <a name="132"><span class="lineNum">     132 </span>            :             }</a>
 <a name="133"><span class="lineNum">     133 </span>            :         }</a>
-<a name="134"><span class="lineNum">     134 </span><span class="lineCov">          2 :         if (pg-&gt;ia-&gt;nbaction &gt; 18) {</span></a>
+<a name="134"><span class="lineNum">     134 </span><span class="lineCov">          3 :         if (pg-&gt;ia-&gt;nbaction &gt; 18) {</span></a>
 <a name="135"><span class="lineNum">     135 </span><span class="lineNoCov">          0 :             if (pg-&gt;J2-&gt;energie != 4) {</span></a>
 <a name="136"><span class="lineNum">     136 </span><span class="lineNoCov">          0 :                 choix = DEPLCMNT;</span></a>
 <a name="137"><span class="lineNum">     137 </span><span class="lineNoCov">          0 :                 if (deplacement_possible(pg, J2, gauche) == 0 &amp;&amp; deplacement_possible(pg, J2, droite) == 0 &amp;&amp;</span></a>
@@ -219,9 +219,9 @@
 <a name="157"><span class="lineNum">     157 </span>            :             }</a>
 <a name="158"><span class="lineNum">     158 </span>            :         }</a>
 <a name="159"><span class="lineNum">     159 </span>            :     }</a>
-<a name="160"><span class="lineNum">     160 </span><span class="lineCov">          4 :     action(pg, J2, choix, dir, ligne, colonne, message);</span></a>
-<a name="161"><span class="lineNum">     161 </span><span class="lineCov">          4 :     pg-&gt;ia-&gt;nbaction++;</span></a>
-<a name="162"><span class="lineNum">     162 </span><span class="lineCov">          4 :     return choix;</span></a>
+<a name="160"><span class="lineNum">     160 </span><span class="lineCov">          6 :     action(pg, J2, choix, dir, ligne, colonne, message);</span></a>
+<a name="161"><span class="lineNum">     161 </span><span class="lineCov">          6 :     pg-&gt;ia-&gt;nbaction++;</span></a>
+<a name="162"><span class="lineNum">     162 </span><span class="lineCov">          6 :     return choix;</span></a>
 <a name="163"><span class="lineNum">     163 </span>            : </a>
 <a name="164"><span class="lineNum">     164 </span>            : }</a>
 <a name="165"><span class="lineNum">     165 </span>            : </a>
